@@ -37,21 +37,13 @@
 </table>
 
 <h4><i>Latest Release: 
-<a href="http://sourceforge.net/project/showfiles.php?group_id=104116&package_id=111904&release_id=230445">alpha-002</a>
-(11 April 2004)</i></h4>
-<ul>
+<a href="http://sourceforge.net/project/showfiles.php?group_id=104116&package_id=111904&release_id=231604">
+alpha-003</a>, 16 April 2004</i></h4>
+
 <dl>
-<dt> tabbed panes
-<dt> fonts loaded from jar
-<dt> new font: Felt Tip Roman (has bold + full char set)
-<dd>
-	I want to add a few choices of fonts; this release I'm just
-	switching to the new one but next release I want to have
-	them choosable because both are good.
-<dt> build the relase automatically
-<dt> bugs, bugs, bugs
+<dt> Fix fatal bug in tabbed panes
+<dt> Show disabled buttons better
 </dl>
-</ul>
 
 <hr>
 
